--- a/.github/workflows/firebase-hosting.yml
+++ b/.github/workflows/firebase-hosting.yml
@@ -3,30 +3,30 @@ name: Deploy to Firebase Hosting on push
 on:
   push:
     branches:
-      - master  # Cambia si tu rama es diferente
+      - master  # Cambia esto si usas otra rama
 
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 🔄 Clonar repositorio
+      - name: Clonar repositorio
         uses: actions/checkout@v3
 
-      - name: 🧱 Instalar Node.js
+      - name: Instalar Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      - name: 📦 Instalar dependencias
+      - name: Instalar dependencias
         run: npm install
 
-      - name: 🏗️ Compilar Next.js (con output: 'export')
+      - name: Compilar Next.js con output export
         run: npm run build
 
-      - name: 📤 Deploy en Firebase Hosting
+      - name: Deploy en Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          channelId: live  # ← O usa "preview" si prefieres
+          channelId: lives
